# deepview

./: .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  backends_fix.patch  bert.sh  build.sh  checkout-src.sh  checkout.sh  deepview.py  deepview_pod_DD2.yaml  env.sh  issue3499.patch  issue3633.patch  kyc_train_data_400.csv  mytrainer.py  patch.sh  pr262.patch  pr3721.patch  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_diff_layers.py  tox.ini  train_classification_cpuopt.py  trainlog2csv.sh  tuning_testgen.py
.github/workflows/: test.yml
configs/: README.md
core/: README.md  backends.py  fx_graph_analyzer.py  generate_minimal_repro.py  hook_monitor.py  inference_fms.py  inference_hf.py  lazyhandles_func.txt  model_runner.py  template_repro_code.py  test_layers.py  torch_sendnn.py  unsupported_db.py
core/function_modifications/: convert_unknown_func.txt  convert_unknown_func_with_stack_trace.txt
core/tmp/: backends.py
deepview/: __init__.py  deepview.py  version.py
deepview/core/: README.md  __init__.py  aiu_input_capture.py  correctness.py  fx_graph_analyzer.py  generate_minimal_repro.py  hook_monitor.py  individual_layer_run.py  individual_layer_run_fms.py  individual_layer_run_hf.py  individual_layer_run_with_inputs.py  inference_testgen.py  input_output_debugging.py  io_debugging.py  layer_debugging.py  layer_io_debugging.py  model_runner.py  template_repro_code.py  test.py  test_layers.py  tuning_testgen.py  unsupported_ops.py
deepview/utils/: README.md  __init__.py  console.py  fms_utils.py  hugging_face_utils.py  io_utils.py  logger.py  model_handler.py  tee.py
deepview/utils/ModelHandler/: model_handler.py  model_handler_base.py  model_handler_fms.py  model_handler_hf.py  model_handler_utils.py
deepview/utils/ModelHandler/FMS/: decoder_handler.py  fms_utils.py  model_handler_fms.py  model_handler_fms_decoders.py
deepview/utils/ModelHandler/HF/: decoder_handler.py  hugging_face_utils.py  model_handler_hf_decoders.py
examples/: README.md  bamba_inference_library.py  deepview_pod.yaml  deepview_pod_DD1.yaml  deepview_pod_DD2.yaml  deepview_pod_DD2_tuning.yaml  gvision_inference_library.py  run_models.py
examples/unsupported_ops/: unsupp_ops_bamba.py  unsupp_ops_gvision.py  unsupp_ops_gvision_fms.py  unsupp_ops_smolVLM-256M-Instruct.py
jenkinsfile/: deepview-single-aiu-test.Jenkinsfile
scripts/: README.md  deepview.py  fms_save_ios.py  isolate_layer.py  layers-io-notes.md  test-layer-io-with-aiu.py
tests/: README.md  conftest.py  deepview_model_runner.py  pytest.ini
tests/core/: conftest.py  test_correctness.py  test_hook_monitor.py  test_layer_debugging.py  test_model_runner.py  tests_fx_graph_analyzer.py  tests_generate_minimal_repro.py  tests_hook_monitor.py  tests_individual_layer_run.py  tests_model_runner.py  tests_unsupported_ops.py
tests/models/: conftest.py  test_bamba9b_hf.py  test_granite2b_fms.py  test_granite8b_fms.py  test_granite8b_micro_fms.py  test_mistral7b_fms.py  test_mistral7b_fms_layer_debugging.py  test_mistral7b_fms_unsupported_ops.py  test_mpnetV2_hf.py  tests_mistral7b_fms.py
tests/utils/: tests_logger.py  tests_model_handler.py  tests_tee.py
tmp/: __init__.py  backends.py  torch_sendnn.py
utils/: README.md  model_handler.py
